# nebulav2

./: .gitignore  ARCHITECTURE.md  DEVLOG.md  README.md  bridge.py  install.sh  nebula-architecture.drawio  proof_inputs.json
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs
extension/: manifest.json  package-lock.json  package.json  popup.html  tsconfig.json  vite.config.ts
extension/src/: background.ts  crypto.ts  popup.tsx
prover/: Cargo.toml  rust-toolchain.toml
prover/.cargo/: config.toml
prover/guest/: Cargo.toml
prover/guest/src/: main.rs
prover/host/: Cargo.toml
prover/host/src/: main.rs
prover/methods/: Cargo.toml
prover/methods/src/: lib.rs
relayer/: Dockerfile  entrypoint.sh  package.json  server.js
soroban/: Cargo.toml
soroban/src/: lib.rs
sp1/program/src/: main.rs
xmss-wasm/: Cargo.toml
xmss-wasm/src/: lib.rs
xmss/src/: main.rs
