[package]
name = "xmss-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
js-sys = "0.3"
